Add response types to websocket swagger doc
